kubernetes/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
spec:
  hostnames:
  - "longhorn.timcasa.me"
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
